# seedance-studio

./: .env.example  .gitignore  LICENSE  README.md  README_zh-CN.md  pyproject.toml  requirements.txt  创建视频生成任务API.md  取消或删除视频生成任务.md  查询视频生成任务API.md  查询视频生成任务列表.md
src/cli/: __init__.py  main.py
src/core/: __init__.py  client.py  config.py  content.py  errors.py
src/gui/: __init__.py  app.py  client.py  content.py  create.py  sidebar.py  state.py  tasks.py
tests/: test_client.py
