[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "seedance-studio"
version = "0.1.0"
description = "A Python client and CLI for Volcengine Ark Seedance video generation tasks."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Seedance Studio" }]
dependencies = [
    "volcengine-python-sdk[ark]>=5.0.26",
    "streamlit>=1.36,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
seedance = "cli.main:main"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that call the real Volcengine Ark SDK and require API credentials",
]
